<resources>
    <string name="app_name">A6</string>
    <string name="action_settings">Settings</string>
    <string name="listItemIndicator">Indicator</string>
    <string name="EditRegNumber">Enter Title</string>
    <string name="EditNotes">Notes</string>
    <string name="EditStatus">Status</string>
    <string name="EditSave">Save</string>
    <string name="EditRegHint">Enter Title</string>

    <string name="STATUS_GOOD">GOOD</string>
    <string name="STATUS_BAD">BAD</string>
    <string name="STATUS_WARNING">WARNING</string>
    <string name="STATUS_NONE">NONE</string>

    <string-array name="spinner_array">
        <item>None</item>
        <item>Good</item>
        <item>Bad</item>
        <item>Warning</item>
    </string-array>

    <string name="BUNDLE_ID">id</string>
    <string name="DialogWantToSave">Do you want to save changes?</string>
    <string name="DialogSave">Save</string>
    <string name="DialogNo">No</string>
    <string name="MainSearchIcon">Search Icon</string>
    <string name="MainSearchEnterTitle">Enter Title</string>
    <string name="SearchNew">New</string>
    <string name="EditDelete">Delete</string>
    <string name="BundleSearchStringKey">title</string>
    <string name="settingsImport">Import Data From File</string>
    <string name="settingsSelectFileButton">Select File</string>
    <string name="settingsBtnExport">Export Data</string>
    <string name="settingsExportLabel">Export Data to CSV</string>
    <string name="settingsDeleteAllLabel">Delete All Notes</string>
    <string name="settingsDeleteBtn">Delete All</string>
    <string name="settingsDeleteNotesDialogConfirm">Delete All</string>
    <string name="mainCancelSearchBtnLabel">Cancel Search</string>
</resources>
